--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ app/__pycache__/
 
 # ide ignore
 .idea/workspace.xml
+.idea/Shapiro_Capstone.iml
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/misc.xml
+.idea/vcs.xml
